--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" name="parametro-a" value="">
+    <input type="text" name="parametro-a" value="">
+    <script>
+        let textA;
+        let textB;
+        
+    </script>
 </body>
 </html>
